# translation-methods

./: .gitignore
cvar-parse/: CMakeLists.txt  Readme.md  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.cpp  token.h
functional-translator/: .gitignore  pom.xml
functional-translator/src/: FuncLangGrammar.g4  LexerRules.g4
parser-generator/: .gitignore  pom.xml
parser-generator/src/main/java/antlr/: GrammarGenerator.g4  GrammarGeneratorBaseListener.java  GrammarGeneratorBaseVisitor.java  GrammarGeneratorLexer.java  GrammarGeneratorListener.java  GrammarGeneratorParser.java  GrammarGeneratorVisitor.java  Utils.g4
parser-generator/src/main/java/ru/ifmo/ctddev/karavaev/translations/generator/: Generator.java
parser-generator/src/main/java/ru/ifmo/ctddev/karavaev/translations/generator/impl/: GeneratorBase.java  LexerGenerator.java  ParserGenerator.java  TokensGenerator.java
parser-generator/src/main/java/ru/ifmo/ctddev/karavaev/translations/generator/impl/utils/: GeneratorContext.java  GrammarGeneratorListener.java  Production.java  Rule.java  Type.java
parser-generator/src/test/java/grammar/: Math.gram
parser-generator/src/test/java/ru/ifmo/ctddev/karavaev/translations/: GeneratorTest.java  MathParserTest.java  ParserTest.java
